# letras

./: CMakeLists.txt  README.txt  build-letras-db.py.in  letras-gui.in  letras.kmdr.in  letras.py.in  palabras-utf8-final.txt  palabras-utf8.txt  palabras.db
